# RocketSHP

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: 20250426_cadist_fixed.yml  20250426_cadist_fixed_squareloss.yml  20250428_large.yml  20250428_mini.yml  20250428_mini_seq.yml  20250430_large_seq.yml  20250519_mdcath_large.yml  architecture_sweep_20250528_135738_best.yaml  config.yml  default_config.yml  fs_shp_kl_reweight2.yml  hparam_best_config.yml  loss_alpha_sweep_20250530_104025_best.yaml  loss_weights_optimal.yml  rocketshp_gcc_20250421.yml  rocketshp_gcc_20250422.yml  rocketshp_pretrained_20250215_v0.yml  sweep_basic.yml  sweep_loss_weights.yml
configs/202505_structure_ablation/: seq_only.yml  struct_encoded.yml  struct_prequantized.yml  struct_quantized.yml  struct_ramachandran.yml  submit_all.sh
configs/ablate_structure_encodings/: seq_only.yml  struct_encoded.yml  struct_prequantized.yml  struct_quantized.yml  struct_ramachandran.yml
models/: rocketshp_pretrained_20250505_v1.ckpt
notebooks/: 0.01_explore_mdcath.ipynb  0.02_explore_foldseek_api.ipynb  0.03_esm3.ipynb  0.04_cath.ipynb  0.05_explore_atlas.ipynb  0.06_explore_pdb.ipynb  1.01_mdcath_to_foldseek.ipynb  1.02_process_foldseek.ipynb  1.03_atlas_shp.ipynb  1.03_atlas_to_torch.ipynb  1.04_atlas_to_torch.ipynb  1.05_disprot.ipynb  1.05_mdigest.ipynb  2.0_evaluate_model_atlas.ipynb  2.1_evaluate_model_mdcath.ipynb  2.22_3g5k_simulation.ipynb  View Flexibility.ipynb  proteinG_corr_matrix.txt
rocketshp/: __init__.py  config.py  dataset.py  ensemble_pdb_to_dir.py  esm3.py  features.py  foldmason_to_entropy.py  mdcath.py  metrics.py  network.py  parallel.py  plot.py  plots.py  trajectory.py  utils.py
rocketshp/data/: __init__.py  atlas.py  mdcath.py  utils.py
rocketshp/datasets/: __init__.py  afdb.py  atlas.py  data_utils.py  mdcath.py  utils.py
rocketshp/interface/: __init__.py  predict.py  train.py  train_sweep.py
rocketshp/modeling/: __init__.py  architectures.py  predict.py  pt_lightning.py  train.py
rocketshp/structure/: __init__.py  affine3d.py  normalize_coordinates.py  protein_chain.py
scripts/: compute_gaussian_network_models.py  gen_corr_mdcath_inner.py  gen_correlation_atlas.py  gen_correlation_atlas_update_h5.py  gen_correlation_mdcath.py  gen_correlation_mdcath_update_h5.py  mdcath_to_foldseek.sh  process_atlas_cpu.py  process_atlas_cpu_backup.py  process_atlas_gpu.py  process_mdcath_cpu.py  process_mdcath_gpu.py  profile_runtime.py  run_inference.py  shp_atlas.py  simulate_3g5k.py  submit_atlas_process.sbatch  template-gpu.sbatch
scripts/02_train/: analyze_hparam_sweep.py  compute_gaussian_network_models.py  create_hparam_sweep.sh  hparam_sweep_workflow.sh  plot_training_validation_loss_curves.py  run_hparam_sweep.sbatch  submit_default_config.sbatch  submit_mdcath.sbatch  submit_seqonly_config.sbatch  submit_structure_ablation.sbatch  submit_training.sbatch
scripts/03_evaluate/: atlas_evaluate_single.py  atlas_validation.py  atlas_validation_OLD.py  compare_rshp_bioemu_dyna.py  compare_rshp_bioemu_dyna_mdcath.py  compare_shp_dimensionality.py  mdcath_temperature.py  mdcath_validation.py  plot_runtime.py  plot_seqonly.py  profile_runtime.py  run_inference.py  (+3 more)
sweeps/: architecture_sweep_20250528_135738.json  loss_alpha_sweep_20250530_104025.json  loss_alpha_sweep_20250602_115536.json  loss_alpha_sweep_20250602_115536_results.csv  sweep_table.csv
(+74 files in other folders)
