[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rocketshp"
version = "0.0.1"
description = "Fast structural heterogeneity estimation"
authors = [
  { name = "Samuel Sledzieski" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "C"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"