[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rocketshp"
version = "0.0.1"
description = "Fast structural heterogeneity estimation"
authors = [
  { name = "Samuel Sledzieski" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

dependencies = [
  "biopython>=1.79",
  "biotite>=0.41.2",
  "datasets>=3.2.0",
  "esm>=3.1.3",
  "h5py>=3.12.1",
  "huggingface_hub>=0.27.1",
  "lightning>=2.5.0",
  "loguru>=0.7.2",
  "matplotlib>=3.10.0",
  "MDAnalysis>=2.8.0",
  "neptune>=1.13.0",
  "nglview>=3.1.4",
  "numpy>=1.23.5",
  "numpy-indexed>=0.3.7",
  "omegaconf>=2.3.0",
  "OpenMM>=8.2",
  "pandas>=2.2.3",
  "ProDy>=2.4.0",
  "python-dateutil>=2.9.0",
  "python-dotenv>=1.0.1",
  "scikit_learn>=1.6.1",
  "scipy>=1.15.1",
  "seaborn>=0.13.2",
  "tokenizers>=0.20.3",
  "torch>=2.5.1",
  "torchmetrics",
  "torchvision",
  "transformers>=4.46.3",
  "tqdm>=4.67.1",
  "typer>=0.15.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "C"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
rocketshp_train = "rocketshp.interface.train:__app__"
rocketshp_predict = "rocketshp.interface.predict:__app__"